--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     colors: {
                         "primary": "#36e27b",
                         "background-light": "#f6f8f7",
-                        "background-dark": "#0d131a", // Đã đồng bộ với Landing Page
+                        "background-dark": "#0d131a", 
                         "card-dark": "#16202b", // Tông surface/card hơi sáng hơn nền chính
                         "input-bg": "#0a1016", // Tông nền input đậm hơn
                         "border-color": "#1f2a37" // Tông border đậm
