--- a/admin/action-screen.html
+++ b/admin/action-screen.html
@@ -68,5 +68,7 @@
 
     <script src="../js/utils.js"></script>
     <script src="../js/script.js"></script>
+    <script src="../js/auth.js"></script> 
+
 </body>
 </html>
