--- a/admin/check-in-management.html
+++ b/admin/check-in-management.html
@@ -395,6 +395,10 @@
         }
     </script>
 
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 
 </html>
