--- a/admin/completion-qr-management.html
+++ b/admin/completion-qr-management.html
@@ -273,5 +273,9 @@
         </main>
     </div>
 
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
