--- a/admin/participants-management.html
+++ b/admin/participants-management.html
@@ -438,5 +438,9 @@
         }
     </script>
 
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
