--- a/admin/report.html
+++ b/admin/report.html
@@ -385,5 +385,9 @@
     </div>
     <div class="fixed bottom-6 right-6 z-50 pointer-events-none" id="toast-container">
     </div>
+
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
