--- a/event-detail.html
+++ b/event-detail.html
@@ -428,5 +428,8 @@
             adminSidebar.classList.toggle('open');
         });
     </script>
+    <script src="js/utils.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/script.js"></script>    
 </body>
 </html>
