--- a/home.html
+++ b/home.html
@@ -392,6 +392,9 @@
             eventsGrid.innerHTML += cardHTML;
         });
     </script>
+    <script src="js/utils.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/script.js"></script>    
 </body>
 
 </html>
