--- a/login.html
+++ b/login.html
@@ -177,6 +177,9 @@
     }
   });
 </script>
+<script src="js/utils.js"></script>
+<script src="js/auth.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 
