--- a/student/my-event.html
+++ b/student/my-event.html
@@ -305,5 +305,9 @@
             </div>
         </main>
     </div>
+
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
