--- a/student/my-journey.html
+++ b/student/my-journey.html
@@ -350,5 +350,9 @@
         </div>
     </main>
 
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
