--- a/student/profile.html
+++ b/student/profile.html
@@ -212,5 +212,10 @@
             </div>
         </div>
     </main>
+
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
