refactor: unify layout and navigation across pages (#2)

--- a/admin/completion-qr-management.html
+++ b/admin/completion-qr-management.html
@@ -112,25 +112,21 @@
         
         <aside class="fixed inset-y-0 left-0 top-20 z-40 w-72 bg-surface-light dark:bg-surface-dark border-r border-border-light dark:border-border-dark flex flex-col transition-transform duration-300 transform -translate-x-full lg:translate-x-0 hidden lg:flex">
             <nav class="flex-1 py-6 px-4 space-y-1">
-                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="home.html">
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="../home.html">
                     <span class="material-symbols-outlined text-[22px] group-hover:text-primary transition-colors">home</span>
                     <span class="nav-label">Home</span>
                 </a>
-                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="eventdetail.html">
-                    <span class="material-symbols-outlined text-[22px] group-hover:text-primary transition-colors">event</span>
-                    <span class="nav-label">Event Detail</span>
-                </a>
-                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="participants.html">
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="participants-management.html">
                     <span class="material-symbols-outlined text-[22px] group-hover:text-primary transition-colors">groups</span>
-                    <span class="nav-label">Participant Management</span>
+                    <span class="nav-label">Participant</span>
                 </a>
-                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="checkin.html">
+                <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="check-in-management.html">
                     <span class="material-symbols-outlined text-[22px] group-hover:text-primary transition-colors">fact_check</span>
-                    <span class="nav-label">Check-in Management</span>
+                    <span class="nav-label">Check-in</span>
                 </a>
                 <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-bold text-black dark:text-white bg-primary/10 border border-primary/20 transition-colors shadow-sm shadow-primary/5" href="qr.html">
                     <span class="material-symbols-outlined text-[22px] text-primary">qr_code_scanner</span>
-                    <span class="nav-label">Completion QR Management</span>
+                    <span class="nav-label">Completion QR</span>
                 </a>
                 <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-white/5 transition-colors group" href="#">
                     <span class="material-symbols-outlined text-[22px] group-hover:text-primary transition-colors">analytics</span>
