--- a/student/my-journey.html
+++ b/student/my-journey.html
@@ -72,7 +72,7 @@
         <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex h-16 items-center justify-between">
                 
-                <a href="home.html" class="flex items-center gap-3 hover:opacity-80 transition-opacity">
+                <a href="../home.html" class="flex items-center gap-3 hover:opacity-80 transition-opacity">
                     <div class="size-8 text-primary">
                         <svg class="w-full h-full" fill="none" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                             <path d="M42.1739 20.1739L27.8261 5.82609C29.1366 7.13663 28.3989 10.1876 26.2002 13.7654C24.8538 15.9564 22.9595 18.3449 20.6522 20.6522C18.3449 22.9595 15.9564 24.8538 13.7654 26.2002C10.1876 28.3989 7.13663 29.1366 5.82609 27.8261L20.1739 42.1739C21.4845 43.4845 24.5355 42.7467 28.1133 40.548C30.3042 39.2016 32.6927 37.3073 35 35C37.3073 32.6927 39.2016 30.3042 40.548 28.1133C42.7467 24.5355 43.4845 21.4845 42.1739 20.1739Z" fill="currentColor"></path>
@@ -83,10 +83,10 @@
                 </a>
 
                 <nav class="hidden md:flex items-center gap-8">
-                    <a class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors" href="home.html">Home</a>
-                    <a class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors" href="myevents.html">My Events</a>
-                    
-                    <a class="text-sm font-bold text-slate-900 dark:text-primary relative py-1" href="myjourney.html">
+                    <a class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors" href="../home.html">Home</a>
+                    <a class="text-sm font-medium text-slate-600 dark:text-gray-300 hover:text-slate-900 dark:hover:text-white transition-colors" href="my-event.html">My Events</a>
+
+                    <a class="text-sm font-bold text-slate-900 dark:text-primary relative py-1" href="my-journey.html">
                         My Journey
                         <span class="absolute -bottom-1 left-0 w-full h-0.5 bg-primary rounded-full"></span>
                     </a>
