--- a/student/profile.html
+++ b/student/profile.html
@@ -67,7 +67,7 @@
     <nav class="sticky top-0 z-50 w-full border-b border-gray-200 dark:border-border-dark bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md">
         <div class="px-4 md:px-10 py-3 flex items-center justify-between">
             
-            <a href="home.html" class="flex items-center gap-4 text-white hover:opacity-80 transition-opacity">
+            <a href="../home.html" class="flex items-center gap-4 text-white hover:opacity-80 transition-opacity">
                 <div class="size-8 text-primary">
                     <svg class="w-full h-full" fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                         <path d="M42.4379 44C42.4379 44 36.0744 33.9038 41.1692 24C46.8624 12.9336 42.2078 4 42.2078 4L7.01134 4C7.01134 4 11.6577 12.932 5.96912 23.9969C0.876273 33.9029 7.27094 44 7.27094 44L42.4379 44Z" fill="currentColor"></path>
@@ -77,9 +77,9 @@
             </a>
 
             <div class="hidden md:flex flex-1 justify-center gap-8">
-                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="home.html">Home</a>
-                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="myevents.html">My Events</a>
-                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="myjourney.html">My Journey</a>
+                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="../home.html">Home</a>
+                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="my-events.html">My Events</a>
+                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="my-journey.html">My Journey</a>
                 <a class="text-primary text-sm font-bold leading-normal" href="profile.html">Profile</a>
             </div>
 
