refactor: decouple login page UI from auth logic

--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
                             </label>
                         </div>
 
-                        <form class="flex flex-col gap-5">
+                        <form id="loginForm" class="flex flex-col gap-5">
                             <div class="flex flex-col gap-2">
                                 <label class="text-sm font-medium text-gray-300 ml-1" for="email">Email / Student ID</label>
                                 <div class="relative">
