--- a/home.html
+++ b/home.html
@@ -160,11 +160,10 @@
           </div>
           <button
             class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
-          >
-            <span class="material-symbols-outlined text-[20px]"
-              >light_mode</span
             >
-          </button>
+            <span class="material-symbols-outlined text-[20px] theme-toggle-icon">
+              light_mode</span>
+            </button>
           <button
             id="sidebar-toggle-btn"
             class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white"
