--- a/event-detail.html
+++ b/event-detail.html
@@ -107,7 +107,7 @@
                         <span class="material-symbols-outlined text-[20px]">settings</span>
                     </button>
                     <button class="flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
-                        <span class="material-symbols-outlined text-[20px]">dark_mode</span>
+                        <span class="material-symbols-outlined text-[20px] theme-toggle-icon">dark_mode</span>
                     </button>
                     <div class="w-10 h-10 rounded-full bg-cover bg-center border-2 border-surface-dark dark:border-white/10 ml-2" role="img" aria-label="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDrr6rBkz1E0BDOWMwVLhOhrdjFKE6VdAZ2VpJ1SYnf-pHNiRz5R4hsrWL0fvIyoJMnjKkSh_HXvIg1jHj6fEwKKWX5hsYET-73k1nQeNAHNePVqRLO6Pv4877sIww9Kt0toBSaUzkAkBNKPDojBKd0rbS4SSHhnXuCIVkbOLM6-iG7FIzzs1k7BewkVEP18i-uZOdwkjR18O8R-Wkmes5ulpfk6RshFIQO5BLr2O0MALOJkrDLN3r3ZOArDTTdtTX5pHOkjEv-GVU');"></div>
                     <button id="sidebar-toggle-btn" class="md:hidden flex items-center justify-center size-10 rounded-full hover:bg-black/5 dark:hover:bg-white/10 transition-colors">
