feat: implement theme switcher functionality across student pages

--- a/student/my-journey.html
+++ b/student/my-journey.html
@@ -102,7 +102,7 @@
                         <span class="material-symbols-outlined">settings</span>
                     </button>
                     <button class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors">
-                        <span class="material-symbols-outlined">dark_mode</span>
+                        <span class="material-symbols-outlined theme-toggle-icon">light_mode</span>
                     </button>
                     <button class="md:hidden flex items-center justify-center w-10 h-10 rounded-full hover:bg-slate-100 dark:hover:bg-white/10 text-slate-600 dark:text-gray-300 transition-colors">
                         <span class="material-symbols-outlined">menu</span>
@@ -349,6 +349,7 @@
 
         </div>
     </main>
+    <script type="module" src="../js/pages/student-base.page.js"></script>
 
 </body>
 </html>
