--- a/student/profile.html
+++ b/student/profile.html
@@ -78,7 +78,7 @@
 
             <div class="hidden md:flex flex-1 justify-center gap-8">
                 <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="../home.html">Home</a>
-                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="my-events.html">My Events</a>
+                <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="my-event.html">My Events</a>
                 <a class="text-text-muted dark:text-text-muted-dark hover:text-primary dark:hover:text-primary text-sm font-medium leading-normal transition-colors" href="my-journey.html">My Journey</a>
                 <a class="text-primary text-sm font-bold leading-normal" href="profile.html">Profile</a>
             </div>
@@ -91,7 +91,7 @@
                     <span class="material-symbols-outlined text-[20px]">settings</span>
                 </button>
                 <button class="flex items-center justify-center rounded-full h-10 w-10 bg-btn-light dark:bg-border-dark text-text-main dark:text-white hover:bg-primary/20 transition-colors">
-                    <span class="material-symbols-outlined text-[20px]">light_mode</span>
+                    <span class="material-symbols-outlined theme-toggle-icon">light_mode</span>
                 </button>
             </div>
         </div>
@@ -212,5 +212,7 @@
             </div>
         </div>
     </main>
+    <script type="module" src="../js/pages/student-base.page.js"></script>
+
 </body>
 </html>
