--- a/student/my-event.html
+++ b/student/my-event.html
@@ -93,7 +93,7 @@
                             <span class="material-symbols-outlined text-[20px]">settings</span>
                         </button>
                         <button class="flex items-center justify-center rounded-full size-10 bg-[#29382f] text-white hover:bg-[#34463c] transition-colors">
-                            <span class="material-symbols-outlined text-[20px]">light_mode</span>
+                            <span class="material-symbols-outlined theme-toggle-icon">light_mode</span>
                         </button>
                     </div>
                 </header>
@@ -305,5 +305,7 @@
             </div>
         </main>
     </div>
+    <script type="module" src="../js/pages/student-base.page.js"></script>
+
 </body>
 </html>
