--- a/admin/check-in-management.html
+++ b/admin/check-in-management.html
@@ -158,7 +158,7 @@
                             fill="currentColor" fill-rule="evenodd"></path>
                     </svg>
                 </div>
-                <span class="font-bold text-lg hidden sm:block">VNUK Event Management Portal</span>
+                <span class="font-bold text-lg hidden sm:block">VNUK</span>
             </div>
         </div>
 
