--- a/admin/participants-management.html
+++ b/admin/participants-management.html
@@ -152,8 +152,7 @@
                             fill="currentColor" fill-rule="evenodd"></path>
                     </svg>
                 </div>
-                <span class="text-lg font-bold tracking-tight text-gray-900 dark:text-white hidden sm:block">VNUK Event
-                    Management Portal</span>
+                <span class="text-lg font-bold tracking-tight text-gray-900 dark:text-white hidden sm:block">VNUK</span>
             </div>
         </div>
         <div class="flex-1"></div>
