--- a/event-detail.html
+++ b/event-detail.html
@@ -119,7 +119,7 @@
     </nav>
 
     <!-- Admin Sidebar -->
-    <aside id="admin-sidebar" class="flex-col hidden z-40">
+    <aside id="admin-sidebar" class="flex-col z-40">
         <div class="p-4 space-y-2">
             <a class="nav-item flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-bold bg-primary/10 text-primary border border-primary/20 transition-all group overflow-hidden" href="home.html">
                 <span class="material-symbols-outlined text-[24px] shrink-0">dashboard</span>
@@ -302,32 +302,7 @@
         </div>
         <div id="tab-qr-content" class="tab-content-qr hidden">
             <!-- JS will render student or admin QR content here -->
-            <div class="w-full h-full min-h-[500px] flex flex-col py-8 px-4 md:px-8 relative animate-in fade-in zoom-in duration-300">
-                <h2 id="ticket-header" class="text-2xl font-bold text-center mb-8 text-gray-900 dark:text-white"></h2>
-                <div class="flex-grow flex flex-col items-center justify-center gap-8 pb-10">
-                    <div class="bg-white dark:bg-[#1c2621] p-8 rounded-3xl shadow-2xl shadow-primary/30 border-4 border-primary/50 ticket-qr active max-w-md w-full">
-                        <svg class="w-full h-auto max-w-[300px] max-h-[300px] mx-auto" fill="none" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                            <rect fill="white" height="100" width="100" x="0" y="0"></rect>
-                            <path fill="currentColor" d="M10 10h20v20h-20zM70 10h20v20h-20zM10 70h20v20h-20zM35 10h5v5h-5zM45 10h5v5h-5zM55 10h5v5h-5zM35 20h5v5h-5zM45 20h5v5h-5zM55 20h5v5h-5zM10 35h5v5h-5zM20 35h5v5h-5zM35 35h30v30h-30zM70 35h5v5h-5zM80 35h5v5h-5zM70 45h5v5h-5zM80 45h5v5h-5zM35 70h5v5h-5zM45 70h5v5h-5zM55 70h5v5h-5zM70 70h20v20h-20z"/>
-                        </svg>
-                        <div class="relative mt-4">
-                            <input id="student-ticket-id" class="w-full text-center text-xl font-mono text-gray-900 dark:text-white placeholder-gray-400 bg-gray-100 dark:bg-black/20 border border-gray-200 dark:border-white/10 rounded-lg p-3 shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent cursor-default" readonly="" type="text" />
-                        </div>
-                        <p class="text-center text-xs text-gray-500 dark:text-gray-400 font-medium uppercase tracking-widest mt-3">Student Ticket ID</p>
-                    </div>
-                </div>
-                <div class="w-full flex flex-col items-center gap-6 mb-6 max-w-md mx-auto">
-                    <button class="group flex items-center justify-center gap-2 px-6 py-3 rounded-xl bg-primary hover:bg-[#2fd16d] text-black font-bold text-base tracking-wide transition-all transform hover:scale-105 shadow-lg shadow-primary/25">
-                        <span class="material-symbols-outlined text-[24px] group-hover:rotate-45 transition-transform">qr_code_scanner</span>
-                        Scan QR to Finish
-                    </button>
-                    <p class="text-sm text-gray-500 dark:text-gray-400">If camera not working, enter code manually</p>
-                    <div class="flex w-full gap-2">
-                        <input type="text" placeholder="Enter code" class="flex-grow rounded-lg border border-gray-200 dark:border-white/10 bg-gray-50 dark:bg-black/20 p-3 text-sm focus:border-primary focus:ring-primary placeholder-gray-400">
-                        <button class="px-6 py-3 rounded-lg bg-primary text-black font-bold text-sm hover:bg-[#2fd16d] transition-all shadow-md">Submit</button>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </main>
     <footer class="mt-auto py-8 text-center text-gray-500 text-sm">
