--- a/home.html
+++ b/home.html
@@ -150,20 +150,17 @@
           >
             <span class="material-symbols-outlined text-[20px]">settings</span>
           </button>
-          <div id="settings-dropdown" class="hidden">
-            <button
-              id="logout-btn"
-              class="block w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10"
-            >
+          <div id="settings-dropdown" class="hidden absolute top-full right-0 mt-2 bg-white dark:bg-[#1c2620] border border-gray-200 dark:border-[#29382f] rounded-lg shadow-xl min-w-[160px] py-1 z-50">
+            <button id="logout-btn" class="w-full text-left px-4 py-2 text-sm text-red-500 hover:bg-red-500/10 flex items-center gap-2 transition-colors">
+              <span class="material-symbols-outlined text-[20px]">logout</span>
               Logout
             </button>
           </div>
           <button
             class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
             >
-            <span class="material-symbols-outlined text-[20px] theme-toggle-icon">
-              light_mode</span>
-            </button>
+            <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+          </button>
           <button
             id="sidebar-toggle-btn"
             class="md:hidden flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] text-slate-700 dark:text-white"
