feat: add theme toggle icon to the light mode button in home page

--- a/home.html
+++ b/home.html
@@ -211,9 +211,10 @@
           </button>
         </div>
         <button
-          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white">
-          <span class="material-symbols-outlined text-[20px]">light_mode</span>
-        </button>
+          class="flex h-10 w-10 cursor-pointer items-center justify-center rounded-full bg-slate-200 dark:bg-[#29382f] hover:bg-slate-300 dark:hover:bg-[#384b40] transition-colors text-slate-700 dark:text-white"
+            >
+            <span class="material-symbols-outlined text-[20px] theme-toggle-icon">light_mode</span>
+          </button>
 
         <div class="h-8 w-px bg-gray-200 dark:bg-white/10 mx-2"></div>
 
