Fix LCP hero image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html class="dark" lang="en">
+<!DOCTYPE html> <html class="dark" lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -170,9 +169,9 @@
                     Empowering <br />
                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-blue-400">Student Growth</span>
                     at VNUK
-                </h1>
+                </h1>   
                 <p class="text-lg text-slate-400 leading-relaxed max-w-lg font-body">
-                    Track your participation, achievements, and rèn luyện points — all in one centralized platform designed for excellence.
+                    Track your participation, achievements, and training scores — all in one centralized platform designed for excellence.
                 </p>
                 <div class="flex flex-wrap gap-4 pt-4">
                     <a href="signup.html" class="cta-button-main h-12 px-8 rounded-full bg-primary text-background-dark font-bold hover:bg-green-400 transition-all shadow-lg active:scale-95 flex items-center gap-2">
@@ -201,7 +200,15 @@
                 <div class="relative aspect-square hero-visual-container"> 
                     <div class="absolute inset-0 bg-gradient-to-br from-primary/30 to-blue-500/30 rounded-full blur-3xl opacity-70"></div>
                     <div class="relative z-20 w-full h-full rounded-3xl overflow-hidden shadow-2xl border border-white/10 bg-surface-dark/90 hero-visual-inner">
-                        <div class="absolute inset-0 bg-cover bg-center opacity-70 mix-blend-overlay" data-alt="University campus modern architecture" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBRgKp76tcKj1OSgmFxxryGiYDzAqcUjnkg8HfUWxPqZW-mjDH5zII9aTpCby3X665YP8pDmfGLuq9nJTrOyJDjqXRIBoIFL4d-eJRv5A--DYyLu__rt5sNWflKOIFvqQ5XYrxIzf-I6YsVPkf8Du1fxSd27kipsQnH_ivyITLtvvPbW4ceJRvc8F_jZs_DeJ-S8b2IArUPi5veaMb9rFrxXETYCmcNIxk3O178n1eeZ-1JddL61t0VTh16WKy6s5BeLNtEux-AbMY')"></div>
+                        
+                        <img
+                            src="/assets/images/hero.avif"   
+                            alt="University System"
+                            fetchpriority="high"
+                            loading="eager"
+                            decoding="async"
+                            class="absolute inset-0 w-full h-full object-cover opacity-70 mix-blend-overlay"/>
+
                         <div class="absolute inset-0 bg-gradient-to-t from-background-dark via-transparent to-transparent"></div>
 
                         <div class="absolute bottom-8 left-8 right-8 glass-card p-4 rounded-xl flex items-center gap-4 animate-pulse duration-1000">
