--- a/admin/completion-qr-management.html
+++ b/admin/completion-qr-management.html
@@ -202,7 +202,7 @@
                                 <span>Hall A, VNUK Campus</span>
                             </div>
                         </div>
-                        <a href="event-detail.html?id=jazz-night" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
+                        <a href="../event-detail.html?id=jazz-night&tab=qr" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
                             <span class="material-symbols-outlined text-[20px]">qr_code_2</span>
                             Manage QR
                         </a>
@@ -230,7 +230,7 @@
                                 <span>Lab 3, VNUK Campus</span>
                             </div>
                         </div>
-                        <a href="event-detail.html?id=career-fair" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
+                        <a href="../event-detail.html?id=career-fair&tab=qr" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
                             <span class="material-symbols-outlined text-[20px]">qr_code_2</span>
                             Manage QR
                         </a>
@@ -258,7 +258,7 @@
                                 <span>Main Auditorium</span>
                             </div>
                         </div>
-                        <a href="event-detail.html?id=robotics" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
+                        <a href="../event-detail.html?id=robotics&tab=qr" class="w-full py-3 rounded-xl bg-gray-50 dark:bg-white/5 hover:bg-gray-100 dark:hover:bg-white/10 text-gray-900 dark:text-white font-bold text-sm transition-all border border-gray-200 dark:border-white/5 hover:border-gray-300 dark:hover:border-white/20 flex items-center justify-center gap-2 relative z-10 shadow-sm decoration-0">
                             <span class="material-symbols-outlined text-[20px]">qr_code_2</span>
                             Manage QR
                         </a>
